Added swagger client code generation
