# product-api/handlers/get.go
@@ -8,15 +8,18 @@ import (
 
 // swagger:route GET /products products listProducts
 // Returns a list of products
-// responses:
+// Responses:
 //  200: productsResponse
 //  500: internalServerError
 
 func (p *Products) GET(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Products endpoint is called")
+	rw.Header().Add("Content-Type", "application/json")
 	lp := data.GetProducts()
 	err := lp.ToJSON(rw)
 	if err != nil {
-		http.Error(rw, "Oops something went wrong", http.StatusInternalServerError)
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 	}
+
 }
